Bug 1181703 - Allow re-entering the panning state if a second finger is tapped while panning with one finger. r=botond